mattermost.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mattermost-app
  labels:
    app: mattermost-maher
    tier: app
  namespace: mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattermost-maher
  template:
    metadata:
      name: mattermost-app
      labels:
        app: mattermost-maher
        tier: app
    spec:
      #restartPolicy: Always
      securityContext:
        fsGroup: 200
      containers:
      - name: mattermost-app
        image: "mattermost/mattermost-prod-app:5.10.0"
        #ports:
        #- containerPort: 80
            #hostPort: 8000
            #- containerPort: 8065
            #hostPort: 8065
        volumeMounts:
        # optional persistent storage
        - name: mattermost-data
          mountPath: /mattermost/data
        - name: etclocaltime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      # optional persistent storage
      - name: mattermost-data
        persistentVolumeClaim:
          claimName: mattermost-db
      - name: etclocaltime
        hostPath:
          path: /etc/localtime
