mattermost.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-service
  namespace: mattermost
  labels:
    app: mattermost-maher
spec:
  type: ClusterIP
  ports:
    - port: 8000
      #targetPort: 8065
  selector:
    app: mattermost-maher
