mattermost.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mattermost-app-ingress
  namespace: mattermost
  labels:
    app: mattermost-maher
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-mattermost
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: rabta.maher.pk
    http:
      paths:
      - backend:
          serviceName: mattermost-service
          servicePort: 8000
  tls:
  - hosts:
    - rabta.maher.pk
    secretName: letsencrypt-mattermost
